some bug fixed for admin opration